objects/Call_Scorecard__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Scorecards</relationshipLabel>
        <relationshipName>Call_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accurately_Described__c</fullName>
        <label>Accurately Described</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard_Basics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ask_for_Business__c</fullName>
        <label>Ask for Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard_Basics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefits_and_Basic_Terms_Comment__c</fullName>
        <label>Benefits and Basic Terms Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefits_and_Basic_Terms__c</fullName>
        <label>Benefits and Basic Terms</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Date__c</fullName>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Feel_Comment__c</fullName>
        <label>Call Feel Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Feel__c</fullName>
        <label>Call Feel</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Session_ID__c</fullName>
        <label>Call Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communicated_Basic_Terms__c</fullName>
        <label>Communicated Basic Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard_Basics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Value_Prop__c</fullName>
        <label>Confirmed Value Prop</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard_Basics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consumer_Reaction_Comment__c</fullName>
        <label>Consumer Reaction Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consumer_Reaction__c</fullName>
        <label>Consumer Reaction</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Scorecards</relationshipLabel>
        <relationshipName>Call_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Offer_Comment__c</fullName>
        <label>Custom Offer Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Offer__c</fullName>
        <label>Custom Offer</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <label>Call Recipient Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Establishes_Follow_up__c</fullName>
        <label>Establishes Follow-up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard_Basics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Example_Scenario_Comment__c</fullName>
        <label>Example Scenario Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Example_Scenario__c</fullName>
        <label>Example Scenario</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intro_and_Value_Prop_Comment__c</fullName>
        <label>Intro and Value Prop Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intro_and_Value_Prop__c</fullName>
        <label>Intro and Value Prop</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Call Scorecards</relationshipLabel>
        <relationshipName>Call_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_Call__c</fullName>
        <formula>HYPERLINK("https://na9.salesforce.com/"&amp;Task_Id__c, Task_Id__c)</formula>
        <label>Link to Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lowest_Indiv_Score__c</fullName>
        <formula>min( Benefits_and_Basic_Terms__c , Call_Feel__c , Consumer_Reaction__c , Custom_Offer__c , Example_Scenario__c , Intro_and_Value_Prop__c , Next_Steps__c , Personality_Type__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lowest Indiv Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Comment__c</fullName>
        <label>Next Steps Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Ended_Questions__c</fullName>
        <label>Open Ended Questions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard_Basics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Call Scorecards</relationshipLabel>
        <relationshipName>Call_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personality_Type_Comment__c</fullName>
        <label>Personality Type and Call Feel Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personality_Type__c</fullName>
        <label>Personality Type and Call Feel</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Specialist_Name__c</fullName>
        <label>Product Specialist Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promote_Unison_Program__c</fullName>
        <label>Promote Unison Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard_Basics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Introduction__c</fullName>
        <label>Proper Introduction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard_Basics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provided_Custom_Offer__c</fullName>
        <label>Provided Custom Offer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard_Basics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualified_Prospect__c</fullName>
        <label>Qualified Prospect</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard_Basics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Read_all_required_disclosures__c</fullName>
        <inlineHelpText>Phone and credit disclosures are required on each call</inlineHelpText>
        <label>Read all required disclosures</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scorecard_Basics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scorer__c</fullName>
        <label>Scorer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Id__c</fullName>
        <label>Task Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>Benefits_and_Basic_Terms__c + Call_Feel__c + Consumer_Reaction__c + Custom_Offer__c + Example_Scenario__c + Intro_and_Value_Prop__c + Next_Steps__c + Personality_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Being_Scored__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Being Scored</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Call Scorecard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Call_Date__c</columns>
        <columns>Product_Specialist_Name__c</columns>
        <columns>Scorer__c</columns>
        <columns>Total_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Call Scorecard</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>